build: change image url in `compose.yml`

--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   ragmate:
-    image: ragmate/ragmate:latest
+    image: ghcr.io/ragmate/ragmate:latest
     command: /bin/sh -c "gunicorn --workers 1 --max-requests 500 --bind 0.0.0.0:11434 -k uvicorn.workers.UvicornWorker app.main:app"
     ports:
       - "11434:11434"
