feat: rename main env vars

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-OPENAI_MODEL=o3-mini
-OPENAI_API_KEY=
-OPENAI_EMBEDDING_MODEL=text-embedding-3-large
+LLM_MODEL=o3-mini
+LLM_API_KEY=
+LLM_EMBEDDING_MODEL=text-embedding-3-large
