--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-known_third_party = chromadb,fastapi,langchain,langchain_chroma,langchain_community,langchain_core,langchain_openai,langchain_text_splitters,langgraph,pathspec,pydantic,pydantic_settings,requests,typing_extensions,watchdog
+known_third_party = chromadb,fastapi,langchain,langchain_chroma,langchain_community,langchain_core,langchain_huggingface,langchain_openai,langchain_text_splitters,langgraph,pathspec,pydantic,pydantic_settings,requests,torch,typing_extensions,watchdog
 known_first_party = app
 multi_line_output = 3
 ensure_newline_before_comments = true
